--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="something_went_wrong">Something Went Wrong,\nPlease check your internet connection.</string>
     <string name="try_again">Try Again</string>
     <string name="review">Review</string>
+    <string name="star">star</string>
 </resources>
